# homelab-portal

./: .gitignore  README.md  openapi.json
app/: main.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260301_0001_create_projects_table.py  20260305_0002_create_service_registry_table.py  20260305_0003_create_project_registry_table.py  20260306_0004_purge_noncanonical_service_registry_rows.py
backend/app/: alerts_feed.py  catalog_reconciliation.py  db.py  gitops_project_sync.py  health_timeline.py  logs_quickview.py  main.py  monitoring_providers.py  observability_cache.py  observability_config.py  projects_backfill.py  release_traceability.py  service_registry_sync.py
backend/scripts/: build_and_push_image.sh  live_catalog_validation.py  migrate_projects_to_service_registry.py  monitoring_refresh_smoke.py  project_source_cutover_smoke.py  sync_catalog_registries.py  sync_project_registry.py  sync_service_registry.py
backend/tests/: test_alerts_feed.py  test_api.py  test_catalog_reconciliation.py  test_catalog_sync_scheduler.py  test_gitops_project_sync.py  test_health_timeline.py  test_live_catalog_validation.py  test_logs_quickview.py  test_monitoring_providers.py  test_observability_config.py  test_projects_backfill.py  test_release_traceability.py  test_service_registry_sync.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  platform-health.sample.json  release-dashboard.sample.json  tailwind.config.cjs  (+6 more)
(+56 files in other folders)
