[project]
name = "homelab-backend"
version = "0.1.0"
description = "Homelab API backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.16.5",
  "fastapi==0.116.1",
  "psycopg[binary]==3.2.12",
  "sqlalchemy==2.0.44",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
